// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshots > matches snapshot for FULL mode with DISPLAY size and none animation 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[4.488rem] w-[4.488rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-display"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for FULL mode with DISPLAY size and pulse animation 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[4.488rem] w-[4.488rem] animate-pulse shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-display"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with body size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[0.8rem] w-[0.8rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="text-body"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with caption size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[0.6rem] w-[0.6rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="text-caption"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with display size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[4.488rem] w-[4.488rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-display"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with hint size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[0.45rem] w-[0.45rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="text-hint"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with lg size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[1.895rem] w-[1.895rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-lg"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with md size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[1.422rem] w-[1.422rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-md"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with sm size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[1.066rem] w-[1.066rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-sm"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with xl size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[2.526rem] w-[2.526rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-xl"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for full mode with xxl size 1`] = `
<div
  class="inline-flex flex-col text-center items-end"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[3.367rem] w-[3.367rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-xxl"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with body size 1`] = `
<div
  class="inline-flex items-center gap-2"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[0.8rem] w-[0.8rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="text-body"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with caption size 1`] = `
<div
  class="inline-flex items-center gap-1"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[0.6rem] w-[0.6rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="text-caption"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with display size 1`] = `
<div
  class="inline-flex items-center gap-4"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[4.488rem] w-[4.488rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-display"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with hint size 1`] = `
<div
  class="inline-flex items-center gap-1"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[0.45rem] w-[0.45rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="text-hint"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with lg size 1`] = `
<div
  class="inline-flex items-center gap-3"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[1.895rem] w-[1.895rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-lg"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with md size 1`] = `
<div
  class="inline-flex items-center gap-2"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[1.422rem] w-[1.422rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-md"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with sm size 1`] = `
<div
  class="inline-flex items-center gap-2"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[1.066rem] w-[1.066rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-sm"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with xl size 1`] = `
<div
  class="inline-flex items-center gap-3"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[2.526rem] w-[2.526rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-xl"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for horizontal mode with xxl size 1`] = `
<div
  class="inline-flex items-center gap-3"
>
  <svg
    aria-hidden="true"
    class="text-primary-500 h-[3.367rem] w-[3.367rem] shrink-0"
    fill="none"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
  <span
    class="heading-xxl"
  >
    Nightstem
  </span>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with body size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[0.8rem] w-[0.8rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with caption size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[0.6rem] w-[0.6rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with display size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[4.488rem] w-[4.488rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with hint size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[0.45rem] w-[0.45rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with lg size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[1.895rem] w-[1.895rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with md size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[1.422rem] w-[1.422rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with sm size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[1.066rem] w-[1.066rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with xl size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[2.526rem] w-[2.526rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;

exports[`Snapshots > matches snapshot for icon mode with xxl size 1`] = `
<div
  class="inline-flex"
>
  <svg
    aria-label="Nightstem logo"
    class="text-primary-500 h-[3.367rem] w-[3.367rem] shrink-0"
    fill="none"
    role="img"
    viewBox="0 0 500 500"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="currentColor"
      height="192.283"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 154.761 0)"
      width="219.719"
    />
    <rect
      fill="currentColor"
      height="428.961"
      transform="matrix(0.814781 0.579768 -0.80486 0.593464 346.04 135.875)"
      width="188.959"
    />
  </svg>
</div>
`;
